chore: add parent_id to details
