# api/swagger.yaml
@@ -1653,6 +1653,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/basicFilter"
+      parent_id:
+        type: integer
+        format: int32
   PersonnePhysiqueCreationBody:
     type: object
     required:
@@ -1931,6 +1934,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/basicFilter"
+      parent_id:
+        type: integer
+        format: int32
   PersonneMoraleCreationBody:
     type: object
     required:
@@ -2205,6 +2211,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/basicFilter"
+      parent_id:
+        type: integer
+        format: int32
   MobilierImageCreationBody:
     type: object
     required:
@@ -2504,6 +2513,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/basicFilter"
+      parent_id:
+        type: integer
+        format: int32
   PendingDocuments:
     type: object
     required:
