# pkg/api/generated_mobilier_image.go
@@ -112,6 +112,9 @@ type MobilierImage struct {
 
 	// themes
 	Themes []*BasicFilter `json:"themes"`
+
+	// parent id
+	ParentID int32 `json:"parent_id,omitempty"`
 }
 
 // Validate validates this mobilier image
