# pkg/api/generated_monument_lieu.go
@@ -103,6 +103,9 @@ type MonumentLieu struct {
 
 	// themes
 	Themes []*BasicFilter `json:"themes"`
+
+	// parent id
+	ParentID int32 `json:"parent_id,omitempty"`
 }
 
 // Validate validates this monument lieu
