# pkg/api/generated_personne_physique.go
@@ -112,6 +112,9 @@ type PersonnePhysique struct {
 
 	// themes
 	Themes []*BasicFilter `json:"themes"`
+
+	// parent id
+	ParentID int32 `json:"parent_id,omitempty"`
 }
 
 // Validate validates this personne physique
